<resources>
    <string name="app_name" translatable="false">Budges</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Bills</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="transaction">Transaction</string>
    <string name="add_transact_on">ADD TRANSACTİON</string>
    <string name="currency">Currency</string>
    <string name="title_activity_first">FirstActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btc">BTC</string>
    <string name="textview">TextView</string>
    <string name="cryptoPrice">TextView</string>
    <string name="cryptoName">TextView</string>
    <string name="cryptoSymbol">BTC</string>
    <string name="cryptoValue">TextView</string>
    <string name="update">UPDATE</string>
    <string name="transactionText">Transaction</string>
    <string name="amount">Amount</string>
    <string name="descripsion">Descripsion</string>
    <string name="update_transact_on">UPDATE TRANSACTİON</string>
    <string name="expanseValue">TextView</string>
    <string name="expanseAmount">TextView</string>
    <string name="descExpanse">TextView</string>
    <string name="transaction_sheet">Transaction</string>
    <string name="type">Type</string>
    <string name="amount_sheet">Amount</string>
    <string name="descripsion_sheet">Descripsion</string>
    <string name="add_sheet">ADD TRANSACTİON</string>
    <string name="currencyPage">Currency</string>
    <string name="dashboard">Dashboard</string>
    <string name="expensesDash">EXPENSES</string>
    <string name="expenseDash">TextView</string>
    <string name="mainText1">SPEND YOUR MONEY FREELY</string>
    <string name="mainTextDesc">You don\'t have to worry about how much money you have left.We track your money for you</string>
    <string name="nextPage">Next</string>
    <string name="skipPage">Skip</string>
    <string name="transactionHome">Transaction</string>
    <string name="amountHome">Amount</string>
    <string name="typeHome">Type</string>
    <string name="incomePage">INCOME</string>
    <string name="incomeAmount">TextView</string>
    <string name="nextPageSecond">Next</string>
    <string name="skipPageSecond">Skip</string>
    <string name="mainText2">GET RID OF PAPER BILLS !</string>
    <string name="mainTextDesc2">You can record your expenses without having to examine the invoices in your hand.</string>
    <string name="get_started">Get Started</string>
    <string name="mainText3">SAVE MORE TIME!</string>
    <string name="mainTextDesc3">You can control your budget by keeping a record of your expenses and you can save more time</string>
    <string name="total_balance">TOTAL BALANCE</string>
    <string name="balance">TextView</string>
    <string name="incomeBalance">TextView</string>
    <string name="income">TextView</string>
    <string name="incomeDesc">TextView</string>
    <string name="transactionName">TextView</string>
    <string name="transactionAmount">TextView</string>
    <string name="transactionDesc">TextView</string>

</resources>