<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.serdar.budges.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_bottomSheetFragment"
            app:destination="@id/bottomSheetFragment" />
        <action
            android:id="@+id/action_navigation_home_to_balanceDialog"
            app:destination="@id/balanceDialog" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.serdar.budges.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.serdar.budges.ui.currency.CurrencyFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_currency" />
   <dialog
        android:id="@+id/bottomSheetFragment"
        android:name="com.serdar.budges.ui.bottomsheet.BottomSheetFragment"
        android:label="fragment_bottom_sheet"
        tools:layout="@layout/fragment_bottom_sheet" >
        <action
            android:id="@+id/action_bottomSheetFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
   </dialog>
    <dialog
        android:id="@+id/balanceDialog"
        android:name="com.serdar.budges.ui.components.BalanceDialog"
        android:label="BalanceDialog" >
        <action
            android:id="@+id/action_balanceDialog_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="currentItem"
            app:argType="com.serdar.budges.data.transaction.Transaction" />
    </dialog>
</navigation>